Changes to rq1 and rq2

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -50,7 +50,7 @@ h3 {
  	stroke-width:2px; 
 }
 
-.rq1 .labeltext {
+.rq1 text.labelText {
 	font: bold 12px Helvetica, Sans-Serif;
-	font-color: DimGray;
+	fill: DimGray;
 }
