--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ footer p {
 	margin-bottom: 0px;
 }
 
-.rq2tooltip {
+.rq2tooltip, .labeltooltip {
   position: absolute;
   width: 150px;
   font-size: 12px;
@@ -332,7 +332,7 @@ footer p {
   padding-bottom: 5px;
 }
 
-.rq2tooltip p {
+.rq2tooltip p, .labeltooltip p {
 	margin: 5px 0px 0px 10px;	
 }
 
