--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,11 @@ body {
 	width: 75%;
 }
 
+.container .rqbox h3 img {
+	vertical-align: middle;
+	width: 14px;
+}
+
 .selector h2 {
 	color: #FFFFFF;
 	margin-left: 15px;
@@ -154,6 +159,30 @@ body {
 
 .helptooltip p {
 	font-size: 12px;
+}
+
+.helptooltipvis {
+    position: absolute;
+    width: 550px;
+    height: auto;
+    padding: 15px 10px 5px 15px;
+    background-color: #F0ECDD;
+    border: solid 1px #9C4590;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+ }
+
+.helptooltipvis img {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	vertical-align: middle;
+	text-align: center;
+    border: solid 1px #9C4590;
 }
 
 .abstract h2 {
