--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
 	left: 25%;
 	width: 50%;
 	color: #ffffff;
-	background: -webkit-linear-gradient(top,#9C4590, #75346c);
+	background: #9C4590;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	padding-top: 4px;
